# game

./: CMakeLists.txt  Makefile
components/camera/: Camera.cpp
components/entity/: Enemy.cpp  Entity.cpp  Player.cpp
components/input/: InputManager.cpp
components/map/: Map.cpp
include/: Camera.hpp  Common.hpp  Constants.hpp  Direction.hpp  Enemy.hpp  Entity.hpp  Game.hpp  InputManager.hpp  Map.hpp  Player.hpp
res/: testmap.json
source/: Game.cpp  main.cpp
ui/: Renderer.cpp  Window.cpp
ui/include/: Renderer.hpp  Window.hpp
